--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "baileys-dtz",
+    "name": "baileys-dileepa",
     "version": "5.0.1",
     "description": "WhatsApp API Modification By DTZ",
     "keywords": [
